fixed situations with uneven rounded corners

--- a/src/styles/search-results.css
+++ b/src/styles/search-results.css
@@ -16,17 +16,18 @@ table {
 }
 
 /* information at top */
-.college-title td {
-   border-radius: 10px 10px 0 0;
+.college-title td, .dept-title td {
+   border-radius: 100px;
    background-color: var(--blue) !important;
-}
-.dept-title td {
-   border-radius: 10px 10px 0 0;
-   background-color: var(--background-secondary) !important;
+   text-align: center;
+   padding: 10px !important;
 }
 .dept-comment td, .college-comment td {
-   border-radius: 0 0 10px 10px;
+   border-radius: 10px;
    background-color: var(--background-secondary) !important;
+}
+.dept-comment p, .college-comment p {
+   padding: 2px 10px 2px 10px;
 }
 
 /* 'title' rows for the classes */
